--- a/abSee/abSee.csproj
+++ b/abSee/abSee.csproj
@@ -45,10 +45,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ABTester.cs" />
-    <Compile Include="ABTester.Settings.cs" />
+    <Compile Include="ABTester.Settings.cs">
+      <DependentUpon>ABTester.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABTester.Static.cs">
+      <DependentUpon>ABTester.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\ABSeeResult.cs" />
     <Compile Include="ITesterProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\HttpRuntimeCacheStorage.cs" />
     <Compile Include="Storage\IUserProvider.cs" />
     <Compile Include="Storage\IStorage.cs" />
     <Compile Include="WebRequestTesterProvider.cs" />
