--- a/abSee/abSee.csproj
+++ b/abSee/abSee.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ITesterProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\HttpRuntimeCacheStorage.cs" />
+    <Compile Include="Storage\IpAddressIdentity.cs" />
     <Compile Include="Storage\IUserProvider.cs" />
     <Compile Include="Storage\IStorage.cs" />
     <Compile Include="WebRequestTesterProvider.cs" />
