Fixed up a bit of the Example. Started some NetBash Command

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\AyBeSeeExample\packages.config" />
+  <repository path="..\abSee.Commands\packages.config" />
   <repository path="..\abSee.Tests\packages.config" />
+  <repository path="..\AyBeSeeExample\packages.config" />
 </repositories>
