--- a/abSee.Commands/packages.config
+++ b/abSee.Commands/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+  <package id="NDesk.Options" version="0.2.1" />
   <package id="NetBash" version="0.2.3.1" />
   <package id="WebActivator" version="1.5" />
 </packages>
