--- a/abSee/abSee.csproj
+++ b/abSee/abSee.csproj
@@ -48,6 +48,7 @@
       <DependentUpon>ABTester.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\ABSeeResult.cs" />
+    <Compile Include="Entities\ABSeeTest.cs" />
     <Compile Include="ITesterProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\HttpRuntimeCacheStorage.cs" />
