--- a/AyBeSeeExample/AyBeSeeExample.csproj
+++ b/AyBeSeeExample/AyBeSeeExample.csproj
@@ -126,6 +126,15 @@
   <ItemGroup>
     <Content Include="Views\Home\Results.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\ExampleTest1.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\ExampleTest2.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\ExampleTest3.cshtml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
