--- a/AyBeSeeExample/AyBeSeeExample.csproj
+++ b/AyBeSeeExample/AyBeSeeExample.csproj
@@ -38,8 +38,8 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="NetBash, Version=0.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NetBash.0.2.3.1\lib\net40\NetBash.dll</HintPath>
+    <Reference Include="NetBash">
+      <HintPath>..\packages\NetBash.0.3.0.0\lib\net40\NetBash.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
