--- a/abSee/abSee.csproj
+++ b/abSee/abSee.csproj
@@ -49,8 +49,10 @@
     </Compile>
     <Compile Include="Entities\ABSeeResult.cs" />
     <Compile Include="Entities\ABSeeTest.cs" />
+    <Compile Include="IOptionSelector.cs" />
     <Compile Include="ITesterProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomOptionSelector.cs" />
     <Compile Include="Storage\HttpRuntimeCacheStorage.cs" />
     <Compile Include="Storage\IpAddressIdentity.cs" />
     <Compile Include="Storage\IUserProvider.cs" />
